adjusted column size and border for text area

--- a/index.html
+++ b/index.html
@@ -37,16 +37,123 @@ document.getElementById("datetime").innerHTML = (("0"+(dt.getMonth()+1)).slice(-
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-    <div class="time-block"></div>
-    <div class="row">9AM</div>
-    <div class="row">10AM</div>
-    <div class="row">11AM</div>
-    <div class="row">12PM</div>
-    <div class="row">1PM</div>
-    <div class="row">2PM</div>
-    <div class="row">3PM</div>
-    <div class="row">4PM</div>
-    <div class="row">5PM</div>
+      <div class="time-block">
+        <div class="row">
+            <div class="col-2" id="slot-1">
+                <p class="display-time">9AM</p>
+            </div>
+            <div class="col-9 agenda-text">
+                <textarea class="agenda"></textarea>
+            </div>
+                <div class="col-1 saveBtn">
+                    <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+            </div>
+    </div>
+</div>
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-2">
+            <p class="display-time">10AM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+            <div class="col-1 saveBtn">
+                <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+            </div>
+    </div>
+</div>
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-3">
+            <p class="display-time">11AM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div>
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-4">
+            <p class="display-time">12PM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div> 
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-5">
+            <p class="display-time">1PM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div> 
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-6">
+            <p class="display-time">2PM</p>
+        </div>
+    <div class="col-9 agenda-text">
+        <textarea class="agenda"></textarea>
+    </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div>
+<div class="time-block">
+    <div class="row"> 
+        <div class="col-2 hour" id="slot-7">
+            <p class="display-time">3PM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div>
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-8">
+            <p class="display-time">4PM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div> 
+<div class="time-block">
+    <div class="row">
+        <div class="col-2 hour" id="slot-9">
+            <p class="display-time">5PM</p>
+        </div>
+        <div class="col-9 agenda-text">
+            <textarea class="agenda"></textarea>
+        </div>
+        <div class="col-1 saveBtn">
+            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
+        </div>
+    </div>
+</div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
