--- a/index.html
+++ b/index.html
@@ -27,134 +27,78 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p>Date/Time: <span id="datetime"></span></p>
+      <p>Date/Time: <span id=datetime></span></p>
 
 <!--Current Date and Time-->
+<!-- Current Date -->
+Current Date:
+<input type="text" id="currentDate">
+<br><br>
 <script>
-var dt = new Date();
-document.getElementById("datetime").innerHTML = (("0"+(dt.getMonth()+1)).slice(-2)) +"/"+ (("0"+dt.getDate()).slice(-2)) +"/"+ (dt.getFullYear()) +" "+ (("0"+dt.getHours()+1).slice(-2)) +":"+ (("0"+dt.getMinutes()+1).slice(-2));
+  var today = new Date();
+  var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
+  document.getElementById("currentDate").value = date;
 </script>
+<!-- Current Time -->
+Current Time:
+<input type="text" id="currentTime">
+<br><br>
+<script>
+var today = new Date();
+var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
+  document.getElementById("currentTime").value = time;
+</script>
+
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="time-block">
-        <div class="row">
-            <div class="col-2" id="slot-1">
-                <p class="display-time">9AM</p>
-            </div>
-            <div class="col-9 agenda-text">
-                <textarea class="agenda"></textarea>
-            </div>
-                <div class="col-1 saveBtn">
-                    <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-            </div>
+      <div class="row" id="9">
+        <div class="col-1 hour">9 AM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="10">
+        <div class="col-1 hour">10 AM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="11">
+        <div class="col-1 hour">11 AM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="12">
+        <div class="col-1 hour">12 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="13">
+        <div class="col-1 hour">1 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="14">
+        <div class="col-1 hour">2 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="15">
+        <div class="col-1 hour">3 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="16">
+        <div class="col-1 hour">4 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
+      <div class="row" id="17">
+        <div class="col-1 hour">5 PM</div>
+        <textarea class="col-10 schedule"></textarea>
+        <button class="col-1 saveBtn">Save</button>
+      </div>
     </div>
-</div>
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-2">
-            <p class="display-time">10AM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-            <div class="col-1 saveBtn">
-                <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-            </div>
-    </div>
-</div>
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-3">
-            <p class="display-time">11AM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div>
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-4">
-            <p class="display-time">12PM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div> 
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-5">
-            <p class="display-time">1PM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div> 
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-6">
-            <p class="display-time">2PM</p>
-        </div>
-    <div class="col-9 agenda-text">
-        <textarea class="agenda"></textarea>
-    </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div>
-<div class="time-block">
-    <div class="row"> 
-        <div class="col-2 hour" id="slot-7">
-            <p class="display-time">3PM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div>
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-8">
-            <p class="display-time">4PM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div> 
-<div class="time-block">
-    <div class="row">
-        <div class="col-2 hour" id="slot-9">
-            <p class="display-time">5PM</p>
-        </div>
-        <div class="col-9 agenda-text">
-            <textarea class="agenda"></textarea>
-        </div>
-        <div class="col-1 saveBtn">
-            <button type="button" class="btn saveIcon"><i class="far fa-save"></i></button>
-        </div>
-    </div>
-</div>
-    </div>
+      
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
