changed color requirements

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 <!--Current Date and Time-->
 <!-- Current Date -->
 Current Date:
-<input type="text" id="currentDate">
+<input type="text" id="currentDay">
 <br><br>
 <script>
   var today = new Date();
   var date = today.getFullYear()+'-'+(today.getMonth()+1)+'-'+today.getDate();
-  document.getElementById("currentDate").value = date;
+  document.getElementById("currentDay").value = date;
 </script>
 <!-- Current Time -->
 Current Time:
