--- a/index.html
+++ b/index.html
@@ -54,49 +54,49 @@ var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds(
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row" id="9">
+      <div class="row time-block" id="9">
         <div class="col-1 hour">9 AM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="10">
+      <div class="row time-block" id="10">
         <div class="col-1 hour">10 AM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="11">
+      <div class="row time-block" id="11">
         <div class="col-1 hour">11 AM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="12">
+      <div class="row time-block" id="12">
         <div class="col-1 hour">12 PM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="13">
+      <div class="row time-block" id="13">
         <div class="col-1 hour">1 PM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="14">
+      <div class="row time-block" id="14">
         <div class="col-1 hour">2 PM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="15">
+      <div class="row time-block" id="15">
         <div class="col-1 hour">3 PM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="16">
+      <div class="row time-block" id="16">
         <div class="col-1 hour">4 PM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
-      <div class="row" id="17">
+      <div class="row time-block" id="17">
         <div class="col-1 hour">5 PM</div>
-        <textarea class="col-10 schedule"></textarea>
+        <textarea class="col-sm-10 description"></textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
     </div>
