--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="javascript" href="script.js"/>
+    
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -56,7 +56,7 @@ var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds(
       <!-- Timeblocks go here -->
       <div class="row time-block" id="9">
         <div class="col-1 hour">9 AM</div>
-        <textarea class="col-sm-10 description"></textarea>
+        <textarea class="col-sm-10 description"> </textarea>
         <button class="col-1 saveBtn">Save</button>
       </div>
       <div class="row time-block" id="10">
@@ -104,5 +104,6 @@ var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds(
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
