added comments to html, edited new colors into css, and changed colors in read me file

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <p>Date/Time: <span id=datetime></span></p>
 
 <!--Current Date and Time-->
+<!--formatting sourced from JavaPoint and W3 Schools-->
 <!-- Current Date -->
 Current Date:
 <input type="text" id="currentDay">
